Cropped logo. Hopefully fixed header to not resize weirdly.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -164,7 +164,7 @@ h6, .h6 {
 /* Content */
 
 .content > h1 img {
-  width: 100%;
+  
 }
 
 #images img, #logo-icon img {
